# rhetorical-analysis-skill

./: .gitignore  .markdownlint.json  CLAUDE.md  README.md  RELEASE.md  SKILL.md  output.json  output.md  pyproject.toml
.github/workflows/: package-skill.yml  test.yml
assets/: SCHEMA.md  analyse_cnews_droitisation.json  analysis_arcep.json  example_analysis.json  example_ddhc_1789.json
benchmark/: README.md
benchmark/annotations/gold/: 001_atecopol_iag.json
docs/: backlog.md  benchmark-protocol.md
openspec/: AGENTS.md  project.md
openspec/changes/add-ci-testing/: tasks.md
openspec/changes/add-ci-testing/specs/ci-testing/: spec.md
openspec/changes/add-github-packaging-workflow/: proposal.md  tasks.md
openspec/changes/add-release-script/: proposal.md  tasks.md
openspec/changes/archive/2025-12-12-add-skill-packaging/: proposal.md  tasks.md
openspec/changes/archive/2025-12-13-add-ci-testing/: proposal.md
openspec/changes/archive/2025-12-13-add-github-packaging-workflow/: proposal.md
openspec/changes/refactor-analysis-pipeline/: proposal.md  tasks.md
openspec/specs/ci-skill-packaging/: spec.md
openspec/specs/ci-testing/: spec.md
openspec/specs/extraction/: spec.md
openspec/specs/formatting/: spec.md
openspec/specs/skill-packaging/: spec.md
references/: existing-frameworks-and-tools.md  fallacies-catalog.md
scripts/: evaluate.py  generate_analysis.py  package_skill.py  release.py
scripts/formatters/: excel.py  json.py  markdown.py
tests/: conftest.py  test_formatters.py  test_generate.py  test_package_skill.py  test_release.py
(+9 files in other folders)
